/*
SPDX-FileCopyrightText: 2020-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: LicenseRef-ONF-Member-1.0
*/

syntax = "proto3";

package openapi.e2.v1beta1;


// RequestHeader a common request header for all requests including encoding type, client/xApp/session info, ordering info, etc
message RequestHeader {
    EncodingType encoding_type = 1;

    // TODO more fields should be added

}

// ResponseHeader a common response header for all responses including encoding type, client/xApp/session info, ordering info, etc
message ResponseHeader {
    EncodingType encoding_type = 1;
    // TODO more fields should be added

}

// EncodingType determines encoding type for the response messages
enum EncodingType {
    ENCODING_TYPE_ASN1 = 0;
    ENCODING_TYPE_PROTO = 1;
}

